--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </main>
-    <div id="favorite-model" class=" fixed min-h-screen  w-full justify-center items-center flex justify-center">
+    <div id="favorite-model" class="hidden fixed min-h-screen  w-full justify-center items-center flex justify-center">
   <div class="ddd my-auto mx-auto bg-white p-[30px] border-black border-[1px] relative rounded-2xl overflow-hidden pt-[30px]" id="favs"
 >
 </div>
